# CrackerJack

./: .clang-format  .gitignore  AutoHuntData.cpp  AutoHuntData.hpp  CJ_Image.cpp  CJ_Image.h  CMakeLists.txt  CrackerJackClient.aps  CrackerJackClient.cpp  CrackerJackClient.h  CrackerJackClient.qrc  CrackerJackClient.rc  CrackerJackClient.sln  CrackerJackClient.ui  CrackerJackClient.vcxproj  CrackerJackClient.vcxproj.filters  Equipment.cpp  GameConnecter.cpp  GameConnecter.h  LETTERS.rar  Logger.cpp  Logger.h  Profession.h  Profiles — kopia.db  Profiles.db  _OLD.hpp  crackerjackclient_pl.ts  items.json  main.cpp  resource.h  settings.ini  version.h
.github/workflows/: master_testcj123.yml
Profiles/: PROF___Britney.ini  PROF___Spejson.ini  PROF___ctfji.ini  PROF___cycki.ini  PROF___ppppp.ini  PROF___ttttt.ini  PROF___tykyeukuyk.ini
Resources/: LETTERS.rar  ProfileDataBaseManager.cpp  ProfileDataBaseManager.h  digitsFromBottomBar.rar  items.json  items.rar  potions.rar  spells.json  spells.rar  texts.json
Resources/jsons/: letters.json  runes.json
Resources/old source files/: Market.cpp  Market.h  Market.ui  MarketProcess.cpp  MarketProcessGui.cpp  other.txt
Resources/symbols/digitsFromBottomBar/: bottomBarDigits.txt
ResourcesArchive/: allPossibleMapColors.json  digitsFromBottomBar.rar  lettersImgs.rar
ResourcesUsing/: items.json  keys.json  letters.json  potions.json  spells.json
enc_temp_folder/db1b9a9610a956ebe27ad01c9c39525/: Profile.cpp
source/: .clang-tidy  AttackMethode.hpp  AutoHuntConfigurator.h  AutoHuntData.cpp  AutoHuntData.hpp  AutoHunting.cpp  AutoHunting.h  BattleList.hpp  CJ_Image.cpp  CJ_Image.h  Calibrator.cpp  Calibrator.h  ClickDetector.hpp  Equipment.h  GameActivityChecker.cpp  GameActivityChecker.h  GameConnecter.cpp  GameConnecter.h  GameProcessData.hpp  GameWindow.hpp  Item.cpp  JsonClass.hpp  JsonParser.h  Key.h  Logger.hpp  MainMenu.cpp  MainMenu.h  MinimapAnalyzer.h  NewProfileConfiguartor.h  NewProfileConfiguartor.ui  PathResource.h  PlayerPosition.hpp  Point3D.hpp  Profession.hpp  Profile.h  RGBstruct.cpp  RGBstruct.h  RestorationMethode.hpp  Route.cpp  Route.h  (+15 more)
sources/: AttackMethode.h  AttackMethode.hpp  AutoHuntConfigurator.cpp  AutoHuntConfigurator.h  AutoHuntConfigurator.ui  AutoHuntData.hpp  AutoHunting.cpp  AutoHunting.h  BattleList.hpp  CJ_Image.cpp  CJ_Image.h  Calibrator.cpp  Calibrator.h  ClickDetector.h  ClickDetector.hpp  ClientServerApi.cpp  ClientServerApi.h  CrackerJackClient.ui  Cryptography.cpp  Cryptography.h  Equipment.h  Equipment.hpp  ErrorManager.cpp  ErrorManager.h  GameActivityChecker.cpp  GameActivityChecker.h  GameConnecter.cpp  GameConnecter.h  GameProcessData.hpp  GameWindow.hpp  ImgEditor.cpp  ImgEditor.h  Item.cpp  Item.h  JsonClass.h  JsonClass.hpp  JsonParser.cpp  JsonParser.h  Key.cpp  Key.h  (+94 more)
